_sass/app.scss
/* ... */
.cta--dark-orange {
  background-color: $dark-orange;
}
.cta--dark-green {
  background-color: $dark-green;
}
.cta--light-yellow {
  background-color: $light-yellow;
}
/******************************************************************
END CTAs
******************************************************************/

/******************************************************************
EVENTS
******************************************************************/
.event-item {

}
.event-item__title {
  margin-top: -5px;
}
.event-item__time {

}
.event-item__location {

}
.event-item__calendar {
  border: 1px solid $medium-gray;
  box-shadow: 1px 1px 5px #999;
  width: 64px;
}
.event-item__calendar--month {
  height: 24px;
  background-color: $dark-blue;
  color: #fff;
  text-align: center;
  padding-top: 5px;
}
.event-item__calendar--day {
  height: 40px;
  color: $dark-gray;
  text-align: center;
  font-size: 28px;
  font-weight: $semibold;
  padding-top: 6px;
}
/******************************************************************
END EVENTS
******************************************************************/

/******************************************************************
CAMPUS FAST FACTS
******************************************************************/
.fast-facts table {
  border: none;
  border-top: $yellow 2px solid;
  width: 100%;
}
.fast-facts__number {
  color: $dark-blue;
}
/******************************************************************
END CAMPUS FAST FACTS
******************************************************************/

/******************************************************************
UWO DRAWER STYLES
******************************************************************/
.drawer__row {
  padding-top: 16px;
  padding-bottom: 16px;
}
/******************************************************************
END DRAWER STYLES
******************************************************************/

/******************************************************************
BESPOKE SLIDER STYLES
******************************************************************/
.deck-container { position: relative; }
deck { position: relative; }
.container-overflow { overflow: hidden; }
#socialTabs {
  width: 144px;
  height: 238px;
  border: 1px solid $light-gray;
  background-color: #fff;
  font-size: 1.2em;
  li {
    width: 100%;
  }
}
#socialTabs dd > a {
  font-size: 13px;
}
#socialTabs>li>a:hover {
  border: none;
  background-color: #fff;
}
#socialTabs>li {
  background-color: #fff;
  a {
    color: $medium-gray;
    border: none;
    border-radius: 0;
    margin-right: 0;
  }
}
#socialTabs>li.active>a {
  background-color: $dark-blue;
  color: #fff;
}

.social-controls {
  position: absolute;
  left: 1074px;
  width: 70px;
  height: 238px;
  border: 1px solid $light-gray;
  background-color: #fff;
  ul {
    margin-top: 50px;
  }
  li {
    color: #fff;
    height: 24px;
    margin-left: 5px;
    margin-right: 5px;
    padding-top: 2px;
  }
  .previous {
    background-color: $blue;
    margin-bottom: 5px;
  }
  .next {
    background-color: $dark-blue;
  }
}
.nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus {
  border: none;
}
slide {
    position: absolute;
    top: 0;
    left: -1px;
    opacity: 0;
}
slide.bespoke-slide {
    -webkit-transition: -webkit-transform .7s ease, opacity .7s ease, background-color .7s ease;
    -moz-transition: -moz-transform .7s ease, opacity .7s ease, background-color .7s ease;
    -ms-transition: -ms-transform .7s ease, opacity .7s ease, background-color .7s ease;
    -o-transition: -o-transform .7s ease, opacity .7s ease, background-color .7s ease;
    transition: transform .7s ease, opacity .7s ease, background-color .7s ease;
}
slide.bespoke-active {
    opacity: 1;
    z-index: 1;
}
/* Classic Theme */
.social-article {
  width: 309px;
  height: 238px;
  border: 1px solid $light-gray;
  background-color: #fff;
  padding-top: 5px;
  padding-left: 5px;
  padding-right: 5px;
}

slide.bespoke-before {
    -webkit-transform: translate3d(-1920px, 0, 0);
    -moz-transform: translate3d(-1920px, 0, 0);
    -ms-transform: translate3d(-1920px, 0, 0);
    -o-transform: translate3d(-1920px, 0, 0);
    transform: translate3d(-1920px, 0, 0);
}
slide.bespoke-before-2 {
    -webkit-transform: translate3d(-1280px, 0, 0);
    -moz-transform: translate3d(-1280px, 0, 0);
    -ms-transform: translate3d(-1280px, 0, 0);
    -o-transform: translate3d(-1280px, 0, 0);
    transform: translate3d(-1280px, 0, 0);
    opacity: 0.1;
}
slide.bespoke-before-1 {
    -webkit-transform: translate3d(-640px, 0, 0);
    -moz-transform: translate3d(-640px, 0, 0);
    -ms-transform: translate3d(-640px, 0, 0);
    -o-transform: translate3d(-640px, 0, 0);
    transform: translate3d(-640px, 0, 0);
    opacity: 0.3;
}
slide.bespoke-after {
    -webkit-transform: translate3d(1920px, 0, 0);
    -moz-transform: translate3d(1920px, 0, 0);
    -ms-transform: translate3d(1920px, 0, 0);
    -o-transform: translate3d(1920px, 0, 0);
    transform: translate3d(1920px, 0, 0);
}
slide.bespoke-after-2 {
    -webkit-transform: translate3d(615px, 0, 0);
    -moz-transform: translate3d(615px, 0, 0);
    -ms-transform: translate3d(615px, 0, 0);
    -o-transform: translate3d(615px, 0, 0);
    transform: translate3d(615px, 0, 0);
    opacity: 1.0;
}
slide.bespoke-after-1 {
    -webkit-transform: translate3d(308px, 0, 0);
    -moz-transform: translate3d(308px, 0, 0);
    -ms-transform: translate3d(308px, 0, 0);
    -o-transform: translate3d(308px, 0, 0);
    transform: translate3d(308px, 0, 0);
    opacity: 1.0;
}
/* ... */

